[fix] Arrange sidebar height and selectionbar bottom offset on mobile

--- a/stylus/ui-app/sidebar.styl
+++ b/stylus/ui-app/sidebar.styl
@@ -10,3 +10,4 @@ $sidebar
         @media (max-width: (1023/basefont)rem)
             border-top   1px solid grey-09
             border-left  none
+            height       em(50px, 16px)
