--- a/stylus/ui-components/selectionbar.styl
+++ b/stylus/ui-components/selectionbar.styl
@@ -75,7 +75,7 @@ $selectionbar
     @media (max-width: (1023/basefont)rem)
         .coz-selectionbar
             top              auto
-            bottom           em(50px)
+            bottom           em(50px, 16px)
             justify-content  flex-start
             height           em(48px)
             padding-left     1em
